--- a/front/src/Components/Premium/style.module.css
+++ b/front/src/Components/Premium/style.module.css
@@ -2,4 +2,5 @@
     max-height: 100vh;
     display: flex;
     flex-direction: row;
+    overflow: hidden;
 }
